--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- tailwindCSS and DaisyUI link  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- style -->
     <style>
         .inter-fonts{
             font-family: 'Inter', sans-serif;
