added images folder

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
     </style>
 </head>
 
-<body class="inter-fonts">
-    <h1>Hello World</h1>
+<body class="inter-fonts max-w-7xl m-auto">
+    <header>
+        <div>
+            <img src="./images/Logo.png" alt="">
+        </div>
+    </header>
 </body>
 
 </html>
