--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
 
 <body class="inter-fonts max-w-7xl m-auto">
     <header>
-        <div>
-            <img src="./images/Logo.png" alt="">
+        <div class="flex justify-between items-center mt-8">
+            <a href="#"><img src="./images/Logo.png" alt=""></a>
+            <div>
+                <button class="btn bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort by view</button>
+            </div>
+            <div>
+                <button class="btn bg-[#FF1F3D] text-white rounded-md hover:text-black">Blog</button>
+            </div>
         </div>
     </header>
 </body>
