--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- style -->
     <style>
-        .inter-fonts{
+        .inter-fonts {
             font-family: 'Inter', sans-serif;
         }
     </style>
@@ -26,16 +26,31 @@
 
 <body class="inter-fonts max-w-7xl m-auto">
     <header>
-        <div class="flex justify-between items-center mt-8">
+        <div class="flex flex-col lg:flex-row gap-3 lg:justify-between items-center mt-8">
             <a href="#"><img src="./images/Logo.png" alt=""></a>
             <div>
-                <button class="btn bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort by view</button>
+                <button
+                    class="btn lg:mr-16 bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort
+                    by view</button>
             </div>
             <div>
                 <button class="btn bg-[#FF1F3D] text-white rounded-md hover:text-black">Blog</button>
             </div>
         </div>
+        <hr class="my-6">
     </header>
+    <main>
+        <div class="flex justify-center gap-4">
+            <a><button
+                    class="btn text-[#171717B2] bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">All</button></a>
+            <a><button
+                    class="btn text-[#171717B2] bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Music</button></a>
+            <a><button
+                    class="btn text-[#171717B2] bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Comedy</button></a>
+            <a><button
+                    class="btn text-[#171717B2] bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Drawing</button></a>
+        </div>
+    </main>
 </body>
 
 </html>
