--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                     class="btn text-[#171717B2] bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Drawing</button></a>
         </div>
     </main>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
