added button using api

--- a/index.html
+++ b/index.html
@@ -40,15 +40,8 @@
         <hr class="my-6">
     </header>
     <main>
-        <div class="flex justify-center gap-4">
-            <a><button
-                    class="btn text-[#171717B2] bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">All</button></a>
-            <a><button
-                    class="btn text-[#171717B2] bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Music</button></a>
-            <a><button
-                    class="btn text-[#171717B2] bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Comedy</button></a>
-            <a><button
-                    class="btn text-[#171717B2] bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Drawing</button></a>
+        <div id="tap-container" class="flex justify-center gap-4">
+
         </div>
     </main>
 
