added button using api

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <hr class="my-6">
     </header>
     <main>
-        <div id="tap-container" class="flex justify-center gap-4">
-
+        <div id="tap-container">
+           
         </div>
     </main>
 
