added card using api

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
         </div>
 
-        <div id="video-container" class="grid grid-cols-4 gap-5 mt-10">
-     
+        <div id="video-container" class="grid md:grid-cols-3 lg:grid-cols-4 gap-5 mt-10">
+
+            
+
 
         </div>
     </main>
