--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="#"><img src="./images/Logo.png" alt=""></a>
             <div>
                 <button
-                    class="btn lg:mr-16 bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort
+                    class="btn lg:mr-20 bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort
                     by view</button>
             </div>
             <div>
@@ -47,7 +47,7 @@
 
         </div>
 
-        <div id="video-container" class="grid md:grid-cols-3 lg:grid-cols-4 gap-5 mt-10">
+        <div id="video-container" class="grid md:gir3 lg:grid-cols-4 gap-5 mt-10">
 
             
 
