--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
 
         </div>
 
-        <div id="video-container" class="grid md:gir3 lg:grid-cols-4 gap-5 mt-10">
-
-           >
-
-
+        <div id="video-container" class="grid md:gir3 lg:grid-cols-4 gap-5 my-10">
+    
         </div>
       
     </main>
