--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="flex flex-col lg:flex-row gap-3 lg:justify-between items-center mt-8">
             <a href="#"><img src="./images/Logo.png" alt=""></a>
             <div>
-                <button
+                <button id="sort-by-views" 
                     class="btn lg:mr-20 bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort
                     by view</button>
             </div>
