--- a/blog.html
+++ b/blog.html
@@ -32,28 +32,15 @@
         <div class="flex flex-col lg:flex-row gap-3 lg:justify-between items-center mt-8">
             <a href="#"><img src="./images/Logo.png" alt=""></a>
             <div>
-                <button id="sort-by-views" 
-                    class="focus:bg-[#FF1F3D] focus:text-white btn lg:mr-20 bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort
-                    by view</button>
-            </div>
-            <div>
-                <button id="blog-btn" class="btn bg-[#FF1F3D] text-white rounded-md hover:text-black">Blog</button>
+                <button class="btn bg-[#FF1F3D] text-white rounded-md hover:text-black">Blog</button>
             </div>
         </div>
         <hr class="my-6">
     </header>
     <main>
-        <div id="tap-container" class="tabs tabs-boxed">
 
-        </div>
-
-        <div id="video-container" class="grid md:gir3 lg:grid-cols-4 gap-5 my-10">
-    
-        </div>
       
     </main>
-
-    <script src="./js/script.js"></script>
 </body>
 
 </html>
