--- a/blog.html
+++ b/blog.html
@@ -29,18 +29,34 @@
 
 <body class="inter-fonts max-w-7xl m-auto">
     <header>
-        <div class="flex flex-col lg:flex-row gap-3 lg:justify-between items-center mt-8">
-            <a href="#"><img src="./images/Logo.png" alt=""></a>
-            <div>
-                <button class="btn bg-[#FF1F3D] text-white rounded-md hover:text-black">Blog</button>
-            </div>
+        <div id="go-to-home" class="flex flex-col lg:flex-row gap-3 lg:justify-between items-center mt-8">
+            <a href="./index.html"><img src="./images/Logo.png" alt=""></a>
         </div>
         <hr class="my-6">
     </header>
     <main>
+        <section>
+            <h1 class="text-black text-center text-4xl font-bold">Latest news
+            </h1>
 
-      
+            <div>
+                <div>
+                    <div class="card w-96 bg-base-100 shadow-xl">
+                        <figure class="px-10 pt-10">
+                          <img src="./images/var-let-and-const.jpg" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-left text-left">
+                          <h2 class="card-title">Discuss the scope of var, let, and const!</h2>
+                          <p>If a dog chews shoes whose shoes does he choose?</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
+
     </main>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
