--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     </style>
 </head>
 
-<body class="inter-fonts max-w-7xl m-auto">
+<body class="inter-fonts max-w-6xl m-auto">
     <header>
         <div class="flex flex-col lg:flex-row gap-3 lg:justify-between items-center mt-8">
             <a href="#"><img src="./images/Logo.png" alt=""></a>
             <div>
-                <button id="sort-by-views" 
+                <button id="sort-by-views"
                     class="focus:bg-[#FF1F3D] focus:text-white btn lg:mr-20 bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort
                     by view</button>
             </div>
@@ -43,14 +43,14 @@
         <hr class="my-6">
     </header>
     <main>
-        <div id="tap-container" class="tabs tabs-boxed">
+        <div id="tap-container" class="container tabs tabs-boxed">
 
         </div>
 
-        <div id="video-container" class="grid md:gir3 lg:grid-cols-4 gap-5 my-10">
-    
+        <div id="video-container" class="grid md:gir3 md:grid-cols-3 lg:grid-cols-4 gap-5 my-10">
+
         </div>
-      
+
     </main>
 
     <script src="./js/script.js"></script>
