--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     </style>
 </head>
 
-<body class="inter-fonts max-w-6xl m-auto">
+<body class="inter-fonts max-w-7xl m-auto">
     <header>
-        <div class="flex flex-col lg:flex-row gap-3 lg:justify-between items-center mt-8">
+        <div class="flex flex-col lg:flex-row md:flex-row gap-3 md:justify-between lg:justify-between items-center mt-8">
             <a href="#"><img src="./images/Logo.png" alt=""></a>
             <div>
                 <button id="sort-by-views"
-                    class="focus:bg-[#FF1F3D] focus:text-white btn lg:mr-20 bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort
+                    class="focus:bg-[#FF1F3D] focus:text-white btn lg:mr-32 md:mr-20 bg-[#25252526] text-[#252525] rounded-md hover:bg-[#FF1F3D] hover:text-white">Sort
                     by view</button>
             </div>
             <div>
@@ -47,8 +47,14 @@
 
         </div>
 
-        <div id="video-container" class="grid md:gir3 md:grid-cols-3 lg:grid-cols-4 gap-5 my-10">
+        <div id="video-container"
+            class="flex justify-center space-y-10 lg:space-y-0 md:space-y-0 items-center lg:grid md:grid md:grid-cols-3 lg:grid-cols-4 lg:gap-5 my-10">
 
+        </div>
+
+
+        <div>
+            
         </div>
 
     </main>
