--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <hr class="my-6">
     </header>
-    <main>
+    <main class="md:ml-6">
         <div id="tap-container" class="container tabs tabs-boxed">
 
         </div>
@@ -52,10 +52,6 @@
 
         </div>
 
-
-        <div>
-            
-        </div>
 
     </main>
 
