--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
             </h1>
 
             <div>
-                <div>
+                <div class="flex flex-col gap-5">
                     <div class="card bg-base-100 shadow-xl">
                         <div class="card-body items-left text-left">
                             <h2 class="card-title">Discuss the scope of var, let, and const!</h2>
